# yonder

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Faraway_analysis.xlsx  RULES.md  TODO.md
docs/: design.md
faraway-client/: game.js  index.html  style.css
faraway-server/: Cargo.toml  e2e_test.py  fast_game.py
faraway-server/src/: cards.rs  game.rs  main.rs  scoring.rs  tests.rs
faraway-server/tests/: scoring_visual.html
yonder-client/: game.js  index.html  style.css  verify-cards.html
yonder-server/: Cargo.toml  e2e_test.py  fast_game.py
yonder-server/src/: cards.rs  db.rs  game.rs  main.rs  tests.rs
yonder-server/tests/: scoring_visual.html
